For water glasses, added a darker thicker water edge for the "front" edge that aligns with the tick mark
Show 6 empty cups on startup for cup mode
Move "cup" button between "vertical bars" and "number line" to fit the pattern: "green stuff on the left"
# 0.00.22 (59569) Dec 20, 2011
Made vertical and horizontal bars click-to-toggle
Made number line draggable
# 0.00.21 (59553) Dec 20, 2011
Made default numerator 0
Fixed initialization bug that caused it to show only 1 pie on startup
Show all 6 pies all the time and gray out if empty
Show a "+" button for adding empty pies
Don't show next pie as empty
Removed "Random/In Order" control panel
# 0.00.20 (59522) Dec 20, 2011
Fixed: Whole pie node has a line at theta=0
Rewrote pie to use individual slices
Added empty pie after a filled pie
# 0.00.19 (59488) Dec 20, 2011
Fixed: a "zero" is not displayed for the "mixed" option.
# 0.00.18 (59483) Dec 19, 2011
Made water tick marks darker
Enabled "holding down the spinner" to cycle through the numbers at a medium speed
Changed max denominator back to 8
Fixed: Cursor hand should turn into an arrow when spinner button disables
Fixed: When pressing toggle button, mouse hand should turn into an arrow
Fixed: If toggle button already pressed, it shouldn't have a mouse hand
Allow numerator to go to 0
Renamed "improper" -> "reduced"
Truncated the number line at 6 (the max value for fractions to be displayed on the screen)
Use a cup image instead of beaker
Made liquid green instead of blue
Added logic for "random fill"
# 0.00.17 (59365) Dec 14, 2011
Added beaker of water leveraging as much code from dilutions as possible, see #3185
Added "None" option to the fraction equality display control panel
# 0.00.16 (59341) Dec 13, 2011
Added cake representation to intro tab
Temporarily increased denominator from 8 to 12 in intro tab for purposes of testing cake with given images
Fixed "Reset all" on intro tab
Centered representations vertically on Intro tab
Removed the grid