@@ -35,9 +35,13 @@ public class VerticalBarSetFractionNode extends ChosenRepresentationNode {
 
                 removeAllChildren();
 
-                int numElementsAdded = 0;
                 double x = 0;
-                double y = 0;
+
+                //Location to start, working from the bottom up.
+                final double initY = barHeight - cellHeight;
+
+                //Start at the bottom and work your way up, like with water glasses
+                double y = initY;
                 for ( int i = 0; i < containerState.get().numContainers; i++ ) {
                     boolean containerEmpty = containerState.get().getContainer( i ).isEmpty();
                     for ( int k = 0; k < denominator; k++ ) {
@@ -49,11 +53,10 @@ public class VerticalBarSetFractionNode extends ChosenRepresentationNode {
                         addChild( new PhetPPath( new Rectangle2D.Double( x, y, width, cellHeight ), color, stroke, strokeColor ) {{
                             PieSetFractionNode.addListener( this, containerState, cp );
                         }} );
-                        y = y + cellHeight;
-                        numElementsAdded++;
+                        y = y - cellHeight;
                     }
                     //Move to next bar
-                    y = 0;
+                    y = initY;
                     x = x + width + distanceBetween;
                 }
             }
